--- a/Práctica.ipynb
+++ b/Práctica.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
     }
    ],
    "source": [
-    "\"\"\"Devuelve una nueva matriz de cuadrados de números enteros ordenados, filtrados por rango [0, S*S].\"\"\"\n",
+    "\"\"\"Devuelve un nuevo arreglo de cuadrados de números enteros ordenados, filtrados por rango [0, S*S].\"\"\"\n",
     "def sorted_squared_array(arr, S):\n",
     "    \n",
     "    left = 0\n",
@@ -470,11 +470,11 @@
     "3. Si se encuentra una moneda mayor que `current_change`, se termina el bucle y `current_change` es el resultado.\n",
     "\n",
     "##### Análisis de Complejidad\n",
-    "- **Ordenar las monedas:** Ordenar la lista de monedas toma \\( O(n \\log n) \\), donde \\( n \\) es la cantidad de monedas.\n",
+    "- **Ordenar las monedas:** Ordenar la lista de monedas toma \\( O(n * log (n)) \\), donde \\( n \\) es la cantidad de monedas.\n",
     "- **Bucle principal:** El bucle `for` recorre todas las monedas una vez, tomando \\( O(n) \\).\n",
     "- **Comparaciones y asignaciones dentro del bucle:** Cada operación dentro del bucle toma \\( O(1) \\).\n",
     "\n",
-    "Por lo tanto, la complejidad total del algoritmo `minimum_unreachable_change` es \\( O(n \\log n) \\)."
+    "Por lo tanto, la complejidad total del algoritmo `minimum_unreachable_change` es \\( O(n * log (n)) \\)."
    ]
   },
   {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -522,12 +522,12 @@
     "    return current_change\n",
     "\n",
     "# Caso de prueba\n",
-    "print(minimum_unreachable_change([]))                # Output: 1\n",
-    "print(minimum_unreachable_change([1, 2, 5]))         # Output: 4\n",
-    "print(minimum_unreachable_change([1, 1, 1, 1, 1]))   # Output: 6\n",
-    "print(minimum_unreachable_change([1, 2, 2, 5, 10]))  # Output: 21\n",
-    "print(minimum_unreachable_change([5, 7, 1, 1, 2, 3, 22])) # Output: 20\n",
-    "print(minimum_unreachable_change([1, 1, 3, 4, 7, 10]))    # Output: 2"
+    "print(minimum_unreachable_change([]))                       # Output: 1\n",
+    "print(minimum_unreachable_change([1, 2, 5]))                # Output: 4\n",
+    "print(minimum_unreachable_change([1, 1, 1, 1, 1]))          # Output: 6\n",
+    "print(minimum_unreachable_change([1, 2, 2, 5, 10]))         # Output: 21\n",
+    "print(minimum_unreachable_change([5, 7, 1, 1, 2, 3, 22]))   # Output: 20\n",
+    "print(minimum_unreachable_change([1, 1, 3, 4, 7, 10]))      # Output: 27"
    ]
   }
  ],
