--- a/Práctica.ipynb
+++ b/Práctica.ipynb
@@ -279,8 +279,11 @@
     "Este algoritmo utiliza dos punteros para recorrer la lista desde ambos extremos, seleccionando el cuadrado mayor y colocándolo en la posición correspondiente en la lista de resultados. Luego, filtra los valores fuera del rango \\([0, S \\times S]\\).\n",
     "\n",
     "```python\n",
+    "\"\"\"Devuelve un nuevo arreglo de cuadrados de números enteros ordenados, filtrados por rango [0, SS].\"\"\"\n",
     "def sorted_squared_array(arr, S):\n",
-    "    \"\"\"Devuelve una nueva matriz de cuadrados de números enteros ordenados, filtrados por rango [0, S*S].\"\"\"\n",
+    "    \n",
+    "    arr.sort()\n",
+    "\n",
     "    left = 0\n",
     "    right = len(arr) - 1\n",
     "    result = [0] * len(arr)\n",
@@ -331,29 +334,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Max value:  66\n",
       "[]\n",
-      "[1, 4, 9, 16, 25, 36]\n",
-      "[4, 9, 9]\n",
-      "[1, 9, 16, 25, 36]\n",
-      "[1, 9, 25]\n"
+      "Max value:  66\n",
+      "[1, 4, 9, 16, 25, 36, 49]\n",
+      "Max value:  66\n",
+      "[4, 9, 9, 49]\n",
+      "Max value:  66\n",
+      "[1, 9, 16, 25, 36, 64]\n",
+      "Max value:  66\n",
+      "[1, 9, 25, 49]\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"Devuelve un nuevo arreglo de cuadrados de números enteros ordenados, filtrados por rango [0, S*S].\"\"\"\n",
+    "\"\"\"Devuelve un nuevo arreglo de cuadrados de números enteros ordenados, filtrados por rango [0, SS].\"\"\"\n",
     "def sorted_squared_array(arr, S):\n",
     "    \n",
+    "    arr.sort()\n",
+    "\n",
     "    left = 0\n",
     "    right = len(arr) - 1\n",
     "    result = [0] * len(arr)\n",
-    "    max_val = S * S\n",
+    "    max_val = S * 11\n",
+    "    print(\"Max value: \", max_val)\n",
     "    index = len(arr) - 1\n",
     "\n",
     "    while left <= right:\n",
