--- a/Práctica.ipynb
+++ b/Práctica.ipynb
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este algoritmo utiliza dos punteros para recorrer la lista desde ambos extremos, seleccionando el cuadrado mayor y colocándolo en la posición correspondiente en la lista de resultados. Luego, filtra los valores fuera del rango \\([0, S \\times S]\\).\n",
+    "Este algoritmo utiliza dos punteros para recorrer la lista desde ambos extremos, seleccionando el cuadrado mayor y colocándolo en la posición correspondiente en la lista de resultados. Luego, filtra los valores fuera del rango \\([0, SS]\\).\n",
     "\n",
     "```python\n",
     "\"\"\"Devuelve un nuevo arreglo de cuadrados de números enteros ordenados, filtrados por rango [0, SS].\"\"\"\n",
@@ -286,7 +286,7 @@
     "\n",
     "    left = 0\n",
     "    right = len(arr) - 1\n",
-    "    result = [0] * len(arr)\n",
+    "    result = [-1] * len(arr)\n",
     "    max_val = S * S\n",
     "    index = len(arr) - 1\n",
     "\n",
@@ -302,8 +302,8 @@
     "            result[index] = square\n",
     "            index -= 1\n",
     "    \n",
-    "    # IMPORTANTE: Se filtran los 0 para que no aparezcan en el vector resultante\n",
-    "    return [x for x in result if x != 0]\n",
+    "    # IMPORTANTE: Se filtran los -1 para que no aparezcan en el vector resultante\n",
+    "    return [x for x in result if x != -1]\n",
     "```"
    ]
   },
@@ -320,7 +320,7 @@
     "- **Asignación de punteros:** Inicializar los punteros `left` y `right` toma \\( O(1) \\).\n",
     "- **Bucle principal:** El bucle `while` se ejecuta \\( O(n) \\) veces, donde \\( n \\) es la longitud de `arr`.\n",
     "- **Comparaciones y asignaciones dentro del bucle:** Cada operación dentro del bucle toma \\( O(1) \\) tiempo, ya que son comparaciones y asignaciones simples.\n",
-    "- **Filtrado final:** Filtrar los ceros del resultado final toma \\( O(n) \\).\n",
+    "- **Filtrado final:** Filtrar los -1 del resultado final toma \\( O(n) \\).\n",
     "\n",
     "Por lo tanto, la complejidad total del algoritmo `sorted_squared_array` es \\( O(n) \\)."
    ]
@@ -334,22 +334,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max value:  66\n",
       "[]\n",
-      "Max value:  66\n",
-      "[1, 4, 9, 16, 25, 36, 49]\n",
-      "Max value:  66\n",
+      "[0]\n",
+      "[0, 1, 4, 9, 16, 25, 36, 49]\n",
       "[4, 9, 9, 49]\n",
-      "Max value:  66\n",
       "[1, 9, 16, 25, 36, 64]\n",
-      "Max value:  66\n",
       "[1, 9, 25, 49]\n"
      ]
     }
@@ -362,7 +358,7 @@
     "\n",
     "    left = 0\n",
     "    right = len(arr) - 1\n",
-    "    result = [0] * len(arr)\n",
+    "    result = [-1] * len(arr)\n",
     "    max_val = S * 11\n",
     "    index = len(arr) - 1\n",
     "\n",
@@ -379,11 +375,12 @@
     "            index -= 1\n",
     "    \n",
     "    # IMPORTANTE: Se filtran los 0 para que no aparezcan en el vector resultante\n",
-    "    return [x for x in result if x != 0]\n",
+    "    return [x for x in result if x != -1]\n",
     "\n",
     "# Casos de prueba\n",
+    "print(sorted_squared_array([], 6))                                      # Output: []\n",
     "print(sorted_squared_array([0], 6))                                     # Output: []\n",
-    "print(sorted_squared_array([-11, -10, -7, -5, -3, -1, 0, 2, 4, 6], 6))  # Output: [1, 4, 9, 16, 25, 36]\n",
+    "print(sorted_squared_array([-11, -10, -7, -5, -3, -1, 0, 2, 4, 6], 6))  # Output: [0, 1, 4, 9, 16, 25, 36]\n",
     "print(sorted_squared_array([-7, -3, 2, 3, 11], 6))                      # Output: [4, 9, 9, 49]\n",
     "print(sorted_squared_array([-8, -6, -5, -4, -3, -1], 6))                # Output: [1, 9, 16, 25, 36]\n",
     "print(sorted_squared_array([1, 3, 5, 7, 9], 6))                         # Output: [1, 9, 25]\n"
@@ -496,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +505,8 @@
       "6\n",
       "21\n",
       "20\n",
-      "27\n"
+      "27\n",
+      "55\n"
      ]
     }
    ],
@@ -532,12 +530,13 @@
     "    return current_change\n",
     "\n",
     "# Caso de prueba\n",
-    "print(minimum_unreachable_change([]))                       # Output: 1\n",
-    "print(minimum_unreachable_change([1, 2, 5]))                # Output: 4\n",
-    "print(minimum_unreachable_change([1, 1, 1, 1, 1]))          # Output: 6\n",
-    "print(minimum_unreachable_change([1, 2, 2, 5, 10]))         # Output: 21\n",
-    "print(minimum_unreachable_change([5, 7, 1, 1, 2, 3, 22]))   # Output: 20\n",
-    "print(minimum_unreachable_change([1, 1, 3, 4, 7, 10]))      # Output: 27"
+    "print(minimum_unreachable_change([]))                               # Output: 1\n",
+    "print(minimum_unreachable_change([1, 2, 5]))                        # Output: 4\n",
+    "print(minimum_unreachable_change([1, 1, 1, 1, 1]))                  # Output: 6\n",
+    "print(minimum_unreachable_change([1, 2, 2, 5, 10]))                 # Output: 21\n",
+    "print(minimum_unreachable_change([5, 7, 1, 1, 2, 3, 22]))           # Output: 20\n",
+    "print(minimum_unreachable_change([1, 1, 3, 4, 7, 10]))              # Output: 27\n",
+    "print(minimum_unreachable_change([1, 5, 1, 1, 1, 10, 15, 20, 100])) # Output: 27"
    ]
   }
  ],
